#
# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")

config("free_bsd_config") {
  include_dirs = [ "//third_party/FreeBSD" ]
}

ohos_static_library("libfreebsd_static") {
  output_name = "libfreebsd_static"
  sources = [ "lib/libc/gen/fts.c" ]
  if (use_libfuzzer && !is_mac) {
    cflags = []
  } else {
    cflags = [
      "-fno-emulated-tls",
      "-fno-lto",
      "-fno-whole-program-vtables",
    ]

    cflags += [
      "-D_GNU_SOURCE",
      "-DHAVE_REALLOCARRAY",
      "-w",
    ]
  }
  public_configs = [ ":free_bsd_config" ]
}
